# glassbox

./: .gitignore  .mcp.json  404.html  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  adult_high_income.csv  adult_metrics.json  adult_model.py  backboard_demo.html  compas_high_risk.csv  compas_metrics.json  compas_model.py  fix_message.md  fix_message.py  index.html  index.txt  preview_social_context.py  pyproject.toml  retune.py  sisa.py  test_session_memory.py  test_social_context.py
.github/workflows/: deploy.yml
_design/: FLOWS.md  PLAN.md  _diag.py  components.md  drag-drop.md  interactive.md  system.md
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
assets/: index-BLFytJrU.css  index-C8eiGCK_.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: preview.html
frontend/src/: App.tsx  main.tsx
glassbox/: __init__.py  __main__.py  adapter.py  api.py  cli.py  window.py
glassbox/bias/: __init__.py  social_context.py
glassbox/fixtures/: baseline.json  baseline__fairlearn_fairlearn-sex-dp.json  baseline__reweight_reweight-race.json  baseline__reweight_reweight-sex.json  baseline__smote_smote-race.json  baseline__smote_smote-sex.json  baseline__threshold_threshold-sex.json  baseline__unlearn_unlearn-male-high-conf.json  baseline__unlearn_unlearn-white-high-conf.json  (+1 more)
preview/: data.json  index.html
web/: next.config.ts  package-lock.json  package.json
(+100 files in other folders)
